# deploy_course_hse

./: LICENSE  README.md  pyproject.toml  report.html
homework-1/data/: titanic_test_dropna.csv  titanic_train_dropna.csv
homework-1/notebooks/: 0.0-data-correlation.ipynb
homework_1/data/: titanic_test_clean.csv  titanic_train_clean.csv
homework_1/models/: ada_boost_metrics.json  ada_boost_model.pickle
homework_1/notebooks/: 0.0-data-correlation.ipynb
homework_1/procedure_pipeline/: load_and_save_dataset.py  preprocessing_functions.py  score.py  train.py
homework_1/scikitlearn_pipeline/: load_and_save_dataset.py  pipeline.py  predict.py  preprocessors.py  train_pipeline.py
homework_1/tests/: df_preprocessing_test.py  model_train_test.py  test.py
homework_1/titanic_prediction/: explain.txt
homework_1/titanic_prediction/models/: train.py
homework_2/pipelines/data_engineering/: nodes.py  pipeline.py
