[tool.poetry]
name = "deploy-course-hse"
version = "0.1.0"
description = ""
authors = ["aigulkhkmv"]

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0"
pandas = "^1.1.4"
jupyter = "^1.0.0"
seaborn = "^0.11.0"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
