[tool.poetry]
name = "deploy-course-hse"
version = "0.1.0"
description = ""
authors = ["aigulkhkmv"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"
jupyter = "^1.0.0"
seaborn = "^0.11.0"
matplotlib = "^3.3.3"
click = "^7.1.2"
loguru = "^0.5.3"
sklearn = "^0.0"
pytest = "^6.1.2"
hypothesis = "^5.41.3"
pytest-html = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
